--- a/Xprema.Management/Xprema.Management.csproj
+++ b/Xprema.Management/Xprema.Management.csproj
@@ -17,4 +17,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Xprema.Framework\Xprema.Framework.csproj" />
+    </ItemGroup>
+
 </Project>
