Add Address, EmailAddress, FullAddress, FullName, PhoneNumber, and ValidationResult classes; implement IValidator interface and update .gitignore for new data types

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ src/ManagmentSystem/Xprema.Managment.Domain/obj/project.nuget.cache
 src/ManagmentSystem/Xprema.Managment.Domain/obj/project.packagespec.json
 src/ManagmentSystem/Xprema.Managment.Domain/obj/rider.project.model.nuget.info
 src/ManagmentSystem/Xprema.Managment.Domain/obj/rider.project.restore.info
+Xprema.Framework/obj/Debug/net9.0/Xprema.Framework.AssemblyInfo.cs
+Xprema.Framework/obj/Debug/net9.0/Xprema.Framework.AssemblyInfoInputs.cache
+Xprema.Framework/obj/Debug/net9.0/Xprema.Framework.AssemblyInfo.cs
+Xprema.Framework/obj/Debug/net9.0/Xprema.Framework.AssemblyInfoInputs.cache
