--- a/Xprema.Framework/Xprema.Framework.csproj
+++ b/Xprema.Framework/Xprema.Framework.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Bussiness\DataTypes\" />
+    </ItemGroup>
+
 </Project>
